--- a/order-summary-component/src/styles/global/global-styles.css
+++ b/order-summary-component/src/styles/global/global-styles.css
@@ -36,6 +36,7 @@ button {
 }
 
 ul[role="list"] {
+  margin: 0;
   padding: 0;
 }
 
